--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 						<div class="info">
 							<i class="icon ion-ios-location-outline"></i>
 							<div class="right-area">
-								<h5>3008 Sarah Drive</h5>
-								<h5>Franklin,LA 70538</h5>
+								<h5>Currently in Jakarta - Indonesia</h5>
+								<h5>Residence in Kota Damansara - Malaysia</h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
@@ -44,8 +44,8 @@
 						<div class="info">
 							<i class="icon ion-ios-telephone-outline"></i>
 							<div class="right-area">
-								<h5>337-4139538</h5>
-								<h6>MIN - FRI,8AM - 7PM</h6>
+								<h5>+60-17 879 7450</h5>
+								<h6></h6>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
@@ -54,8 +54,8 @@
 						<div class="info">
 							<i class="icon ion-ios-chatboxes-outline"></i>
 							<div class="right-area">
-								<h5>contact@colorlib.com</h5>
-								<h6>REPLY IN 24 HOURS</h6>
+								<h5>amr_abor@yahoo.com</h5>
+								<h6></h6>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
