--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
 				<div class="col-md-10 col-lg-8">
 					<div class="intro">
 						<div class="profile-img"><img src="images/profile-1-250x250.jpg" alt=""></div>
-						<h2><b>Michel SMith</b></h2>
-						<h4 class="font-yellow">Key Account Manager</h4>
+						<h2><b>Amr Aborig</b></h2>
+						<h4 class="font-yellow">Software Engineer</h4>
 						<ul class="information margin-tb-30">
-							<li><b>BORN : </b>August 25, 1987</li>
-							<li><b>EMAIL : </b>mymith@mywebpage.com</li>
-							<li><b>MARITAL STATUS : </b>Married</li>
+							<li><b>BORN : </b>July 5, 1992</li>
+							<li><b>EMAIL : </b>amr_abor@yahoo.com</li>
+							<li><b>MARITAL STATUS : </b>Single</li>
 						</ul>
 						<ul class="social-icons">
 							<li><a href="#"><i class="ion-social-pinterest"></i></a></li>
