file and update

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<div class="info">
 							<i class="icon ion-ios-location-outline"></i>
 							<div class="right-area">
-								<h5>Currently in Jakarta - Indonesia</h5>
+								<h5></h5>
 								<h5>Residence in Kota Damansara - Malaysia</h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
@@ -62,7 +62,7 @@
 				</div><!-- row -->
 			</div><!-- heading-wrapper -->
 			
-			<a class="downlad-btn" href="#">Download CV</a>
+			<a class="downlad-btn" href="AMMAResumeOct19v1.pdf">Download CV</a>
 		</div><!-- container -->
 	</header>
 	
