--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-	<title>CV - Boxed</title>
+	<title>Amr Aborig - Portfolio</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
@@ -336,7 +336,7 @@
 			
 				<div class="col-sm-6 col-md-6 col-lg-3">
 					<div class="counter margin-b-30">
-						<h1 class="title"><b><span class="counter-value" data-duration="400" data-count="3">0</span></b></h1>
+						<h1 class="title"><b><span class="counter-value" data-duration="400" data-count="2">0</span></b></h1>
 						<h5 class="desc"><b>Coder Degrees</b></h5>
 					</div><!-- counter -->
 				</div><!-- col-md-3-->
@@ -350,14 +350,14 @@
 				
 				<div class="col-sm-6 col-md-6 col-lg-3">
 					<div class="counter margin-b-30">
-						<h1 class="title"><b><span class="counter-value" data-duration="700" data-count="311">0</span></b></h1>
+						<h1 class="title"><b><span class="counter-value" data-duration="700" data-count="34">0</span></b></h1>
 						<h5 class="desc"><b>Satisfied Clients</b></h5>
 					</div><!-- counter -->
 				</div><!-- col-md-3-->
 				
 				<div class="col-sm-6 col-md-6 col-lg-3">
 					<div class="counter margin-b-30">
-						<h1 class="title"><b><span class="counter-value" data-duration="2000" data-count="732">0</span></b></h1>
+						<h1 class="title"><b><span class="counter-value" data-duration="2000" data-count="28">0</span></b></h1>
 						<h5 class="desc"><b>Finished Projects</b></h5>
 					</div><!-- margin-b-30 -->
 				</div><!-- col-md-3-->
