--- a/index.html
+++ b/index.html
@@ -81,11 +81,9 @@
 							<li><b>MARITAL STATUS : </b>Single</li>
 						</ul>
 						<ul class="social-icons">
-							<li><a href="#"><i class="ion-social-pinterest"></i></a></li>
-							<li><a href="#"><i class="ion-social-linkedin"></i></a></li>
-							<li><a href="#"><i class="ion-social-instagram"></i></a></li>
-							<li><a href="#"><i class="ion-social-facebook"></i></a></li>
-							<li><a href="#"><i class="ion-social-twitter"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/amr-aborig/" target="_blank"><i class="ion-social-linkedin"></i></a></li>
+							<li><a href="https://www.instagram.com/amruzzi/" target="_blank"><i class="ion-social-instagram"></i></a></li>
+							<li><a href="https://www.facebook.com/a.aborig" target="_blank"><i class="ion-social-facebook"></i></a></li>
 						</ul>
 					</div><!-- intro -->
 				</div><!-- col-sm-8 -->
