--- a/index.html
+++ b/index.html
@@ -177,14 +177,7 @@
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
-					<p class="margin-b-50">Duis non volutpat arcu, eu mollis tellus. Sed finibus aliquam neque 
-					sit amet sodales. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-					Nulla maximus pellentes que velit, quis consequat nulla effi citur at. 
-					Maecenas sed massa tristique.Duis non volutpat arcu, eu mollis tellus. 
-					Sed finibus aliquam neque sit amet sodales. Lorem ipsum dolor sit amet, 
-					consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur 
-					adipiscing elit. Nulla maximus pellentes que velit, quis consequat nulla 
-					effi citur at.Maecenas sed massa tristique.</p>
+					<p class="margin-b-50">Experienced Lead Software Engineer with a demonstrated history of working in the computer software industry. Skilled in PHP, Android, Node.js, Ionic Framework, and AngularJS. Strong engineering professional with a Bachelor's degree focused in Computer Software Engineering from Asia Pacific University College of Technology and Innovation.</p>
 					
 					<div class="row">
 						<div class="col-sm-6 col-md-6 col-lg-3">
