--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 				<div class="col-sm-8">
 					<div class="portfolioFilter clearfix margin-b-80">
 						<a href="#" data-filter="*" class="current"><b>ALL</b></a>
+						<a href="#" data-filter=".mobile"><b>WEB DESIGN</b></a>
 						<a href="#" data-filter=".web-design"><b>WEB DESIGN</b></a>
 						<a href="#" data-filter=".branding"><b>BRANDING</b></a>
 						<a href="#" data-filter=".graphic-design"><b>GRAPHIC DESIGN</b></a>
@@ -113,6 +114,11 @@
 		
 		<div class="portfolioContainer">
 			
+			<div class="p-item mobile">
+				<a href="images/pp.jpg" data-fluidbox>
+					<img src="images/portfolio-1-600x400.jpg" alt=""></a>
+			</div><!-- p-item -->
+
 			<div class="p-item web-design">
 				<a href="images/portfolio-1-600x400.jpg" data-fluidbox>
 					<img src="images/portfolio-1-600x400.jpg" alt=""></a>
