--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 				<div class="col-sm-8">
 					<div class="portfolioFilter clearfix margin-b-80">
 						<a href="#" data-filter="*" class="current"><b>ALL</b></a>
-						<a href="#" data-filter=".mobile"><b>Mobile</b></a>
-						<a href="#" data-filter=".web-design"><b>WEB DESIGN</b></a>
+						<a href="#" data-filter=".mobile"><b>MOBILE</b></a>
+						<a href="#" data-filter=".web-dev"><b>WEB DEVELOPMENT</b></a>
 						<a href="#" data-filter=".branding"><b>BRANDING</b></a>
 						<a href="#" data-filter=".graphic-design"><b>GRAPHIC DESIGN</b></a>
 					</div><!-- portfolioFilter -->
@@ -119,7 +119,7 @@
 					<img src="images/pp.jpg" alt=""></a>
 			</div><!-- p-item -->
 
-			<div class="p-item web-design">
+			<div class="p-item web-dev">
 				<a href="images/portfolio-1-600x400.jpg" data-fluidbox>
 					<img src="images/portfolio-1-600x400.jpg" alt=""></a>
 			</div><!-- p-item -->
