--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-	<title>Amr Aborig - Portfolio</title>
+	<title>Amr Aborig | Portfolio</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
@@ -104,9 +104,8 @@
 					<div class="portfolioFilter clearfix margin-b-80">
 						<a href="#" data-filter="*" class="current"><b>ALL</b></a>
 						<a href="#" data-filter=".mobile"><b>MOBILE</b></a>
-						<a href="#" data-filter=".web-dev"><b>WEB DEVELOPMENT</b></a>
-						<a href="#" data-filter=".branding"><b>BRANDING</b></a>
-						<a href="#" data-filter=".graphic-design"><b>GRAPHIC DESIGN</b></a>
+						<a href="#" data-filter=".wordpress"><b>WORDPRESS</b></a>
+						<a href="#" data-filter=".web-apps"><b>WEB APPS</b></a>
 					</div><!-- portfolioFilter -->
 				</div><!-- col-sm-8 -->
 			</div><!-- row -->
