--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 		
 		<div class="portfolioContainer">
 			
-			<div class="p-item mobile">
-				<a href="images/pp.jpg" data-fluidbox>
-					<img src="images/pp.jpg" alt=""></a>
+			<div class="p-item wordpress">
+				<a href="images/oksilogo.png" data-fluidbox>
+					<img src="images/oksicom.png" alt=""></a>
 			</div><!-- p-item -->
 
 			<div class="p-item web-dev">
