--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 		<div class="portfolioContainer">
 			
 			<div class="p-item wordpress">
-				<a href="images/oksilogo.png" data-fluidbox>
-					<img src="images/oksicom.png" alt=""></a>
+				<a href="images/oksicom.png" data-fluidbox>
+					<img src="images/oksilogo.png" alt=""></a>
 			</div><!-- p-item -->
 
 			<div class="p-item web-dev">
