--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
 					<img src="images/oksilogo.png" alt=""></a>
 			</div><!-- p-item -->
 
+			<div class="p-item web-apps">
+				<a href="images/iccom.png" data-fluidbox>
+					<img src="images/iclogo.png" alt=""></a>
+			</div><!-- p-item -->
+
 			<div class="p-item web-dev">
 				<a href="images/portfolio-1-600x400.jpg" data-fluidbox>
 					<img src="images/portfolio-1-600x400.jpg" alt=""></a>
