photos & homepage changes

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 						<div class="info">
 							<i class="icon ion-ios-location-outline"></i>
 							<div class="right-area">
-								<h5></h5>
-								<h5>Residence in Kota Damansara - Malaysia</h5>
+								<h5>Residence in</h5>
+								<h5>Tripoli - Libya</h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
@@ -105,7 +105,7 @@
 					<div class="portfolioFilter clearfix margin-b-80">
 						<a href="#" data-filter="*" class="current"><b>ALL</b></a>
 						<a href="#" data-filter=".mobile"><b>MOBILE</b></a>
-						<a href="#" data-filter=".wordpress"><b>WORDPRESS</b></a>
+						<a href="#" data-filter=".websites"><b>WEBSITES</b></a>
 						<a href="#" data-filter=".web-apps"><b>WEB APPS</b></a>
 					</div><!-- portfolioFilter -->
 				</div><!-- col-sm-8 -->
@@ -114,64 +114,168 @@
 		
 		<div class="portfolioContainer">
 			
-			<div class="p-item wordpress">
+			<div class="p-item websites">
 				<a href="images/oksicom.png" data-fluidbox>
 					<img src="images/oksilogo.png" alt=""></a>
-			</div><!-- p-item -->
+			</div>
 
-			<div class="p-item web-apps">
+			<div class="p-item websites">
 				<a href="images/iccom.png" data-fluidbox>
 					<img src="images/iclogo.png" alt=""></a>
-			</div><!-- p-item -->
+			</div>
 
-			<div class="p-item web-dev">
+			<div class="p-item websites">
+				<a href="images/psdtourscom.png" data-fluidbox>
+					<img src="images/psdtourslogo.png" alt=""></a>
+			</div>
+
+			<div class="p-item websites">
+				<a href="images/psdtravelcom.png" data-fluidbox>
+					<img src="images/psdtravellogo.png" alt=""></a>
+			</div>
+			
+			<div class="p-item websites">
+				<a href="images/twccom.png" data-fluidbox>
+					<img src="images/twccom.png" alt=""></a>
+			</div>
+			
+			<div class="p-item websites">
+				<a href="images/rpcom.png" data-fluidbox>
+					<img src="images/rplogo.png" alt=""></a>
+			</div>
+			
+			<div class="p-item websites">
+				<a href="images/rpjoin.png" data-fluidbox>
+					<img src="images/rplogo.png" alt=""></a>
+			</div>
+			
+			<div class="p-item websites">
+				<a href="images/rpeventcom.png" data-fluidbox>
+					<img src="images/rplogo.png" alt=""></a>
+			</div>
+			
+			<div class="p-item websites">
+				<a href="images/medicedcom.png" data-fluidbox>
+					<img src="images/medicedlogo.png" alt=""></a>
+			</div>
+			
+			<div class="p-item websites">
+				<a href="images/psdtourscom.png" data-fluidbox>
+					<img src="images/psdtourslogo.png" alt=""></a>
+			</div>
+			
+			<div class="p-item web-apps">
+				<a href="images/pgrmcom.png" data-fluidbox>
+					<img src="images/pgrmlogo.png" alt=""></a>
+			</div>
+			
+			<div class="p-item websites">
+				<a href="images/abcom.png" data-fluidbox>
+					<img src="images/ablogo.png" alt=""></a>
+			</div>
+			
+			<div class="p-item websites">
+				<a href="images/amitee.png" data-fluidbox>
+					<img src="images/amitee.png" alt=""></a>
+			</div>
+			
+			<div class="p-item websites">
+				<a href="images/cactuscom.png" data-fluidbox>
+					<img src="images/cactuslogo.png" alt=""></a>
+			</div>
+			
+			<div class="p-item websites">
+				<a href="images/edgecliniccom.png" data-fluidbox>
+					<img src="images/edgecliniclogo.png" alt=""></a>
+			</div>
+			
+			<div class="p-item websites">
+				<a href="images/huazongcom.png" data-fluidbox>
+					<img src="images/huazonglogo.png" alt=""></a>
+			</div>
+			
+			<div class="p-item websites">
+				<a href="images/ltwcom.png" data-fluidbox>
+					<img src="images/ltwlogo.png" alt=""></a>
+			</div>
+			
+			<div class="p-item websites">
+				<a href="images/maecom.png" data-fluidbox>
+					<img src="images/maelogo.png" alt=""></a>
+			</div>
+			
+			<div class="p-item websites">
+				<a href="images/needscom.png" data-fluidbox>
+					<img src="images/needslogo.png" alt=""></a>
+			</div>
+			
+			<div class="p-item websites">
+				<a href="images/republikcom.png" data-fluidbox>
+					<img src="images/republiklogo.png" alt=""></a>
+			</div>
+			
+			<div class="p-item websites">
+				<a href="images/uecom.png" data-fluidbox>
+					<img src="images/uelogo.png" alt=""></a>
+			</div>
+			
+			<div class="p-item websites">
+				<a href="images/btscom.png" data-fluidbox>
+					<img src="images/btslogo.png" alt=""></a>
+			</div>
+			
+			<div class="p-item web-apps">
+				<a href="images/tgbcom.png" data-fluidbox>
+					<img src="images/tgblogo.png" alt=""></a>
+			</div>
+			<!-- <div class="p-item web-dev">
 				<a href="images/portfolio-1-600x400.jpg" data-fluidbox>
 					<img src="images/portfolio-1-600x400.jpg" alt=""></a>
-			</div><!-- p-item -->
+			</div>
 			
 			<div class="p-item branding graphic-design">
 				<a href="images/portfolio-7-600x800.jpg" data-fluidbox>
 					<img src="images/portfolio-7-600x800.jpg" alt=""></a>
-			</div><!-- p-item -->
+			</div>
 			
 			<div class="p-item web-design">
 				<a href="images/portfolio-2-600x400.jpg" data-fluidbox>
 					<img src="images/portfolio-2-600x400.jpg" alt=""></a>
-			</div><!-- p-item -->
+			</div>
 			
 			<div class="p-item p-item-2 graphic-design">
 				<a class="img" href="images/portfolio-8-300x400.jpg" data-fluidbox>
 					<img src="images/portfolio-8-300x400.jpg" alt=""></a>
 				<a class="img" href="images/portfolio-9-300x400.jpg" data-fluidbox>
 					<img src="images/portfolio-9-300x400.jpg" alt=""></a>
-			</div><!-- p-item -->
+			</div>
 			
 			<div class="p-item branding graphic-design">
 				<a href="images/portfolio-3-600x400.jpg" data-fluidbox>
 					<img src="images/portfolio-3-600x400.jpg" alt=""></a>
-			</div><!-- p-item -->
+			</div>
 			
 			<div class="p-item graphic-design web-design">
 				<a href="images/portfolio-4-600x400.jpg" data-fluidbox>
 					<img src="images/portfolio-4-600x400.jpg" alt=""></a>
-			</div><!-- p-item -->
+			</div>
 			
 			<div class="p-item  graphic-design branding">
 				<a href="images/portfolio-5-600x800.jpg" data-fluidbox>
 					<img src="images/portfolio-5-600x800.jpg" alt=""></a>
-			</div><!-- p-item -->
+			</div>
 				
 			<div class="p-item web-design branding">
 				<a href="images/portfolio-6-600x800.jpg" data-fluidbox>
 					<img src="images/portfolio-6-600x800.jpg" alt=""></a>
-			</div><!-- p-item -->
+			</div>
 
 			<div class="p-item p-item-2 graphic-design">
 				<a class="img" href="images/portfolio-10-300x400.jpg" data-fluidbox>
 					<img src="images/portfolio-10-300x400.jpg" alt=""></a>
 				<a class="img" href="images/portfolio-11-300x400.jpg" data-fluidbox>
 					<img src="images/portfolio-11-300x400.jpg" alt=""></a>
-			</div><!-- p-item -->
+			</div> --><!-- p-item -->
 		
 		</div><!-- portfolioContainer -->
 		
