--- a/index.html
+++ b/index.html
@@ -347,29 +347,22 @@
 						<h4><b>LEAD SOFTWARE ENGINEER</b></h4>
 						<h5 class="font-yellow"><b>INVOCORE SDN BHD</b></h5>
 						<h6 class="margin-t-10">NOV 2018 - JUN 2019</h6>
-						<p class="font-semi-white margin-tb-30">Duis non volutpat arcu, eu mollis tellus. Sed finibus aliquam neque sit amet sodales. 
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla maximus pellentes que velit, 
-							quis consequat nulla effi citur at. Maecenas sed massa tristique.Duis non volutpat arcu, 
-							eu mollis tellus. Sed finibus aliquam neque sit amet sodales. </p>
-						<ul class="list margin-b-30">
-							<li>Duis non volutpat arcu, eu mollis tellus.</li>
-							<li>Quis consequat nulla effi citur at.</li>
-							<li>Sed finibus aliquam neque sit.</li>
-						</ul>
+						<p class="font-semi-white margin-tb-30">Built Time Management System (TMS) for the company to provide as a service using a biometric device for employee attendance operations and reporting with the Integration and configuration of the server and other online tools such as Heroku as part of the TMS to accept clocking data from remote devices. </p>
 					</div><!-- experience -->
 					
 					<div class="experience margin-b-50">
 						<h4><b>WEB APPLICATION DEVELOPER</b></h4>
 						<h5 class="font-yellow"><b>OKS SOLUTIONS SDN. BHD.</b></h5>
 						<h6 class="margin-t-10">DEC 2017 - OCT 2018</h6>
-						<p class="font-semi-white margin-tb-30">Duis non volutpat arcu, eu mollis tellus. Sed finibus aliquam neque sit amet sodales. 
+						<!-- <p class="font-semi-white margin-tb-30">Duis non volutpat arcu, eu mollis tellus. Sed finibus aliquam neque sit amet sodales. 
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla maximus pellentes que velit, 
 							quis consequat nulla effi citur at. Maecenas sed massa tristique.Duis non volutpat arcu, 
-							eu mollis tellus. Sed finibus aliquam neque sit amet sodales. </p>
+							eu mollis tellus. Sed finibus aliquam neque sit amet sodales. </p> -->
 						<ul class="list margin-b-30">
-							<li>Duis non volutpat arcu, eu mollis tellus.</li>
-							<li>Quis consequat nulla effi citur at.</li>
-							<li>Sed finibus aliquam neque sit.</li>
+							<li>Built platform with the Laravel & CodeIgniter frameworks.</li>
+							<li>Built multiple CMS dashboards using the xCRUD framework.</li>
+							<li>Built and customized e-commerce solutions using WordPress CMS.</li>
+							<li>Testing and debugging any issues raised from new, previous and ongoing development.</li>
 						</ul>
 					</div><!-- experience -->
 
@@ -377,14 +370,16 @@
 						<h4><b>SOFTWARE ENGINEER</b></h4>
 						<h5 class="font-yellow"><b>WEBCLIXER CREATIVES</b></h5>
 						<h6 class="margin-t-10">MAY 2016 - NOV 2017</h6>
-						<p class="font-semi-white margin-tb-30">Duis non volutpat arcu, eu mollis tellus. Sed finibus aliquam neque sit amet sodales. 
+						<!-- <p class="font-semi-white margin-tb-30">Duis non volutpat arcu, eu mollis tellus. Sed finibus aliquam neque sit amet sodales. 
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla maximus pellentes que velit, 
 							quis consequat nulla effi citur at. Maecenas sed massa tristique.Duis non volutpat arcu, 
-							eu mollis tellus. Sed finibus aliquam neque sit amet sodales. </p>
+							eu mollis tellus. Sed finibus aliquam neque sit amet sodales. </p> -->
 						<ul class="list margin-b-30">
-							<li>Duis non volutpat arcu, eu mollis tellus.</li>
-							<li>Quis consequat nulla effi citur at.</li>
-							<li>Sed finibus aliquam neque sit.</li>
+							<li>Developed 2 Android applications frontend & backend.</li>
+							<li>Developed a solution for a 360° camera to handle video uploading to YouTube following the recording then texting a video link to the customer.</li>
+							<li>Performed prelaunch testing operations on other systems developed by the company.</li>
+							<li>Worked on few WordPress websites.</li>
+							<li>Aided in the testing of <i>The Giving Bank</i> Charity platform prelaunch.</li>
 						</ul>
 					</div><!-- experience -->
 					
