--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<div class="col-sm-6 col-md-6 col-lg-4">
 						<div class="info">
 							<!-- <i class="icon ion-ios-telephone-outline"></i> -->
-							<i class="icon ion-ios-logo-whatsapp"></i>
+							<i class="icon ion-logo-whatsapp"></i>
 							<div class="right-area">
 								<h5>+60-17 879 7450</h5>
 								<h6></h6>
