--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 			</div>
 			
 			<div class="p-item websites">
-				<a href="images/rpjoin.png" data-fluidbox>
+				<a href="images/rpjoincom.png" data-fluidbox>
 					<img src="images/rplogo.png" alt=""></a>
 			</div>
 			
