--- a/index.html
+++ b/index.html
@@ -149,17 +149,7 @@
 			</div>
 			
 			<div class="p-item websites">
-				<a href="images/rpcom.png" data-fluidbox>
-					<img src="images/rplogo.png" alt=""></a>
-			</div>
-			
-			<div class="p-item websites">
-				<a href="images/rpjoincom.png" data-fluidbox>
-					<img src="images/rplogo.png" alt=""></a>
-			</div>
-			
-			<div class="p-item websites">
-				<a href="images/rpeventcom.png" data-fluidbox>
+				<a href="images/rpcom2.png" data-fluidbox>
 					<img src="images/rplogo.png" alt=""></a>
 			</div>
 			
