--- a/index.html
+++ b/index.html
@@ -128,9 +128,14 @@
 					<img src="images/oksilogo.png" alt=""></a>
 			</div>
 
-			<div class="p-item websites">
+			<div class="p-item web-apps">
 				<a href="images/iccom.png" data-fluidbox>
 					<img src="images/iclogo.png" alt=""></a>
+			</div>
+
+			<div class="p-item mobile">
+				<a href="images/bloopcom.png" data-fluidbox>
+					<img src="images/blooplogo.png" alt=""></a>
 			</div>
 
 			<div class="p-item websites">
