--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
 					<img src="images/blooplogo.png" alt=""></a>
 			</div>
 
+			<div class="p-item mobile">
+				<a href="images/sucom.png" data-fluidbox>
+					<img src="images/sulogo.png" alt=""></a>
+			</div>
+
 			<div class="p-item websites">
 				<a href="images/psdtourscom.png" data-fluidbox>
 					<img src="images/psdtourslogo.png" alt=""></a>
