--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 							<i class="icon ion-ios-telephone-outline"></i>
 							<!-- <i class="icon ion-logo-whatsapp"></i> -->
 							<div class="right-area">
-								<h5>WhatsApp</h5>
-								<h6>+60-17 879 7450</h6>
+								<h5>Mobile</h5>
+								<h6><a href="tel:218-91-0107744">+218-91 010 7744</a></h6>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
