--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div class="info">
 							<i class="icon ion-ios-location-outline"></i>
 							<div class="right-area">
-								<h5>Residence in</h5>
+								<h5>Residing in</h5>
 								<h5>Tripoli - Libya</h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
@@ -64,8 +64,8 @@
 						<div class="info">
 							<i class="icon ion-ios-chatboxes-outline"></i>
 							<div class="right-area">
-								<h5>amr_abor@yahoo.com</h5>
-								<h6></h6>
+								<h5>Email</h5>
+								<h6><a href="mailto:amr_abor@yahoo.com">amr_abor@yahoo.com</a></h6>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
