--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	  fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));
 
-	FB.CustomerChat.show(shouldShowDialog: boolean);
+	FB.CustomerChat.show(shouldShowDialog: true);
 
 	</script>
 	<title>Amr Aborig | Portfolio</title>
