--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				</div><!-- row -->
 			</div><!-- heading-wrapper -->
 			
-			<a class="downlad-btn" href="AMMAResumeNov'19LYv1.pdf">Download CV</a>
+			<a class="downlad-btn" href="AMMA Resume_updated_02_06_2022.pdf">Download CV</a>
 		</div><!-- container -->
 	</header>
 	
