--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<!-- <i class="icon ion-logo-whatsapp"></i> -->
 							<div class="right-area">
 								<h5>Mobile</h5>
-								<h6><a href="tel:218-91-0107744">+218-91 010 7744</a></h6>
+								<h6><a href="tel:+17096301992">+1-709 630 1992</a></h6>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
