--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<i class="icon ion-ios-location-outline"></i>
 							<div class="right-area">
 								<h5>Residing in</h5>
-								<h5>St. John's - Newfoundland and Labrador</h5>
+								<h5>St. John's -<br> Newfoundland and Labrador</h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
