--- a/index.html
+++ b/index.html
@@ -410,8 +410,8 @@
 				<div class="col-sm-8">
 					<div class="education-wrapper">
 						<div class="education margin-b-50">
-							<h4><b>MASTER IN INFORMATION TECHNOLOGY MANAGEMENT</b></h4>
-							<h5 class="font-yellow"><b>BINARY UNIVERSITY</b></h5>
+							<h4><b>MASTER OF APPLIED SCIENCE IN COMPUTER ENGINEERING</b></h4>
+							<h5 class="font-yellow"><b>MEMORIAL UNIVERSITY OF NEWFOUNDLAND</b></h5>
 							<h6 class="font-lite-black margin-t-10">ONGOING</h6>
 							<p class="margin-tb-30">. </p>
 						</div><!-- education -->
