--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 							<h4><b>MASTER OF APPLIED SCIENCE IN COMPUTER ENGINEERING</b></h4>
 							<h5 class="font-yellow"><b>MEMORIAL UNIVERSITY OF NEWFOUNDLAND</b></h5>
 							<h6 class="font-lite-black margin-t-10">ONGOING</h6>
-							<p class="margin-tb-30">. </p>
+							<p class="margin-tb-30"></p>
 						</div><!-- education -->
 						
 						<div class="education margin-b-50">
